# LandMap

./: .gitignore  .vercelignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY_AUTO.ps1  DEPLOY_GUIDE.md  DESIGN.md  Dockerfile.api  MEMORY.md  README.md  _build_wrapper.py  analyze_css.py  cloudflared.yml  compare_live.py  compare_lovable.py  coolify.json  deploy_build.ps1  deploy_final.ps1  deploy_log.txt  deploy_run.ps1  docker-compose.yml  domains_inspect.ps1  download_lovable_chunks.py  extract.js  extract_css.js  extract_lovable.py  extract_lovable_routes.py  extract_schema.py  i18n_diff.py  landmap-complete-plan.md  lovable_admin.html  lovable_chunk_Combination.js  lovable_chunk_Combination.js.meta.json  lovable_chunk_admin.js  lovable_chunk_admin.js.meta.json  lovable_chunk_admin_0_~flock.js.txt  lovable_chunk_admin_1_events.js.txt  lovable_chunk_admin_2_index-DxhHPzjf.js  lovable_chunk_admin_2_index-DxhHPzjf.js.txt  (+81 more)
.hermes/: todos.md
.storybook/: main.ts  preview.ts
docs/: README.md  admin-agents-followup-2026-07.md  audit-lovable-color-schema.md  cto-investment-analysis-2026-07.md  design-audit-sv-2026.md  design-cto-lovable.md  design-system-audit.md  financial-projections-2026-07-21.md  landmap-monetization-plan.py  lovable-parity-recheck-2026-07.md  lovable-port-pattern.md  map-intelligence-lovable-spec.md  (+4 more)
python/: .gitignore  README.md  pyproject.toml
python/docker/: Dockerfile  docker-compose.yml
python/notebooks/: eda_properties.py
python/tests/: test_features.py  test_ingest.py  test_realtime.py  test_refiner_trained.py  test_valuation.py
(+4851 files in other folders)
