[project]
name = "landmap-ds"
version = "0.1.0"
description = "LandMap data-science workspace (uv workspace root)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5",
    "jupyterlab>=4.2",
    "marimo>=0.9",
    "nbformat>=5.10",
    "ipykernel>=6.29",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["packages", "tests"]
pythonpath = ["."]
addopts = "-q"
